--- a/mt-intern.css
+++ b/mt-intern.css
@@ -7,6 +7,7 @@
 }
 
 body{
+    margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -28,13 +29,24 @@ div{
 }
 
 .links{
-    margin-right: 40px;
+   
+    width: 50%;
+    margin-right: 0px;
+}
+
+.alinks{
+    width: 100%;
 }
 
 a{
     padding: 10px;
     text-decoration: none;
     color: black;
+}
+
+.hamburger{
+    display: none;
+    
 }
 
 .landing-body{
@@ -84,119 +96,36 @@ a{
     line-height: 40px;
 }
 
-
-
-.section1{
-    width: 85%;
-}
-
-.sec1-img{
-    width: 530px;
-height: 430px
-}
-
-.sec1-body{
-    margin-top: -50px;
-    width: 45%;
-    color: #084482; 
-}
-
-.sec1-title{
-    font-size: 40px;
-}
-
-.sec1-text{
-    font-size: 17px;
-    /* border: 1px solid black; */
-    width: 73%;
-}
-
-.sec1-btn{
-    border: none;
-    width: 130px;
-    height: 40px;
-    color: white;
-    background-color: #00AEFF;
-}
-
-
-.section2{
-    background: #E4EDF2;
-    width: 85%;
-}
-
 .sec2{
-    /* width: 85%; */
-    line-height: 8px;
-    color: #084482;
+    width: 90%;
 }
 
-.sec2-title{
-    font-size: 36px;
+.intern-cont{
+    width: 45%;
 }
 
-.sec2-text{
-    font-size: 14px;
+.intern-profile{
+    width: 100%;
 }
 
-.card-box{
-    margin-top: 30px;
+
+.i-text{
+    line-height: 10px;
 }
 
-.card{
-    background: #00AEFF;
-    width: 520px;
-    height: 230px;
-}
-
-.card-text{
-    font-size: 20px;
-    color: white;
+.h-rule{
     width: 70%;
+    height: 2px;
+    background-color: black;
 }
 
-.three{}
-
-.sec3{
-    width: 85%;
-}
-
-.sec3-title{
-    font-size: 35px;
-    color: #084482;
-}
-
-.card2{
-    background: #00AEFF;
-    width: 520px;
-    height: 300px;
-}
-
-.card2-text{
-    font-size: 31px;
-}
-
-.base-text{
-    width: 85%;
-    font-size: 25px;
-    color: #00AEFF;
-}
-
-.sec4{
-    width: 85%;
-}
-
-.sec4-title{
-    font-size: 35px;
-    color: #084482;
-}
-
-.sponsors{
-    flex-wrap: wrap;
-}
-
-.sponsor-img{
-    margin: 60px;
+#hide-button{
+    display: none;
+    width: 150px;
+    height: 50px;
+    background-color:  #00AEFF;
+    border: none;
+    color: white;
 }
 
 .curve{
@@ -276,8 +205,36 @@ footer{
 @media screen and (max-width: 570px){
 
     .nav-cont{
-        height: 150px;
+        height: 120px;
     }
+
+    .nav{
+        flex-direction: column;
+        height: 60px;
+    }
+
+    .logo{
+        margin-left: 20px;
+        margin-top: 10px;
+        width: 100%;
+        height: 700px;
+        justify-content: space-between;
+    }
+
+    .hng-logo{
+        width: 35%;
+        height: 50px;
+    }
+
+    .hamburger{
+        display: block;
+        margin-right: 60px;
+    }
+
+    a{
+        /* display: none; */
+    }
+
 
     .l-cont{
         margin-left: 90px;
@@ -289,6 +246,7 @@ footer{
     }
     
     .l-text{
+        width: 100%;
         font-size: 19px;
     }
 
@@ -296,80 +254,110 @@ footer{
         width: 100%;
     }
 
+    .landing-body{
+        margin-left: -30px;
+        width: 95%;
+    }
+
+    .landing-image{
+        margin-top: 40px;
+    }
+
     .links{
+        width: 100%;
+        height: 300px;
+    }
+
+    .menu-line{
+        margin: 8px;
+        width: 40px;
+        height: 3px;
+        background-color: #084482;
+    }
+
+    #hide-link{
+        display: none;
+    }
+    
+    .alinks{
+        display: none;
+        border-bottom-right-radius: 30%;
+        border-bottom-left-radius: 30%;
+        margin-top: 5%;
+        width: 100%;
+        background-color: #E4EDF2;
+        flex-direction: column;
+        justify-content: center;
+        height: 300px;
+        z-index: 1;
+    }
+    
+    a{
+        display: flex;
+        justify-content: center;
+        color: #084482; 
+        /* border: 1px solid white; */
+        padding: 30px;
+        cursor: pointer;
+         margin-left: 20px;
+        font-size: 13px;
+    }
+
+    a:hover{
+        background-color: whitesmoke;
+    }
+
+    .sec2{
+        flex-direction: column;
+       
+    }
+
+    .text{
+        line-height: 18px;
+        font-size: 13px;
+    }
+
+    #hide{
         display: none;
     }
 
-    .section1{
+    .hide-button{
+        display: block;
+    }
+
+    .show{
         flex-direction: column;
     }
 
-    .sec1-img{
-        width: 100%;
-        height: 300px
-    }
-
-    .sec1-body{
-        margin-top: 8px;
-        width: 100%;
+    .intern-cont{
+        width: 95%;
+        margin-top: 80px;
     }
     
-    .sec1-title{
-        font-size: 30px;
-    }
-    
-    .sec1-text{
-        font-size: 14px;
+    .intern-profile{
         width: 100%;
     }
 
-    .sec2-title{
-        font-size: 27px;
+    .small{
+        width: 110px;
+        height: 110px;
     }
     
-    .sec2-text{
-        width: 100%;
-        font-size: 14px;
-        line-height: 18px;
-    }
-
-    .card-box{
-        flex-direction: column;
-    }
-
-    .card{
-        background: #00AEFF;
-        width: 90%;
-        height: 180px;
-        margin: 13px;
-    }
-
-    .sec3-title{
-        font-size: 27px;
-    }
-
-    .card2{
-        background: #00AEFF;
-        width: 90%;
-        height: 200px;
-        margin: 13px;
-    }
-
-    .card2-text{
-        font-size: 15px;
-    }
-
-    .card-text{
+    
+    .i-text{
+        line-height: 10px;
         font-size: 14px;
     }
 
-    .sec4-title{
-        font-size: 27px;
+    #hide-button{
+        display: block;
+       
     }
-
-    .sponsor-img{
-        width: 100px;
-        height: 40px;
+    
+    .h-rule{
+        width: 80%;
+        height: 2px;
+        background-color: black;
     }
 
     footer{
